# prompt-lora

./: .gitignore  README.md  data_prep.py  distill.py  eval_prompts.py  judge_offline.py  pyproject.toml  train_qlora.py
eval/: rubric.md
notebooks/: train_colab.ipynb
tests/: test_data_prep.py  test_distill.py  test_judge_offline.py  test_train_colab.py  test_training_eval.py
