[project]
name = "prompt-lora"
version = "0.1.0"
description = "QLoRA dataset and training scaffold for cinematic video prompts"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
train = [
  "accelerate",
  "bitsandbytes",
  "datasets",
  "peft",
  "transformers",
  "trl",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
